<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 应用程序名称 -->
    <string name="app_name">App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 打开DEMO按钮的文本 -->
    <string name="go_to_demo">打开DEMO</string>
    <!-- 打开Study按钮的文本 -->
    <string name="go_to_study">打开Study页面</string>
    <string name="close">关闭</string>
    <string name="go_back">返回</string>
    <string name="run">运行</string>
    <string name="study_add_view_by_code">用代码添加控件</string>
    <string name="study_download_file">下载文件</string>
    <string name="study_json_parse">Json 解析</string>
    <string name="study_sqlite">SQLite</string>
    <string name="study_video">Video</string>
    
    <string name="study_gesture">手势</string>
    <string name="demo_book_image_content_description">正文</string>
    <string name="title_activity_demo_main">DemoMainActivity</string>
    <string name="title_activity_study_main">StudyMainActivity</string>
    <string name="title_activity_directory">DirectoryActivity</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_add_view_by_code">AddViewByCodeActivity</string>
    <string name="title_activity_download_file">DownloadFileActivity</string>
    <string name="title_activity_file_and_path">FileAndPathActivity</string>
    <string name="title_activity_gesture">GestureActivity</string>
    <string name="title_activity_json_parse">JsonParseActivity</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="title_activity_zip">ZipActivity</string>
    <string name="title_activity_video">VideoActivity</string>

</resources>
